Scrollbar showing. Corrected issue

--- a/style.css
+++ b/style.css
@@ -30,8 +30,10 @@ footer, header, hgroup, menu, nav, section {
 }
 html ,body {
 	height: 100%;
+	width: 100%;
 	line-height: 1;
 	text-align: center;
+	overflow: hidden;
 
 }
 ol, ul {
@@ -47,11 +49,10 @@ q:before, q:after {
 }
 
 .container {
-	min-height: 100vh;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	background: #eee;
   }
 
